# BoxDMK

./: .gitignore  CMakeLists.txt  README.md
benchmark/: bench_fortran_same_problem.f90  bench_julia_same_problem.jl  run_same_problem_benchmark.sh
docs/: julia-interface.md  user-interface.md
docs/plans/: 2026-02-27-julia-ccall-interface.md  2026-02-27-julia-interface-design.md
julia/: Project.toml  README.md
julia/example/: tree_eval.jl
julia/src/: BoxDMK.jl  highlevel.jl
julia/test/: runtests.jl
src/bdmk/: bdmk_c_api.f90
